--- a/symfonyCRUDpanel/app/Resources/views/album/new.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/album/new.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Album creation</h1>
+    <h1>Dodaj album</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
@@ -10,7 +10,7 @@
     {{ err }}
     <ul>
         <li>
-            <a href="{{ path('album_index') }}">Back to the list</a>
+            <a href="{{ path('album_index') }}">Powrót do listy</a>
         </li>
     </ul>
 {% endblock %}
