label and layout

--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -5,7 +5,7 @@
     <title>Przykładowe API</title>
 
     <meta charset="utf-8"/>
-    <title>Retrogranie</title>
+    <title>Miejska Orkiestra Dęta w Suchej Beskidzkiej</title>
     <meta name="description"
           content="orkiestra Sucha Beskidzka"/>
     <meta name="keywords" content="orkiestra"/>
@@ -33,9 +33,17 @@
         body {
             font-family: 'Lato', sans-serif;
             font-size: 150%;
+            color:#3BA66E;
             background-color: #222930;
             /*background-color: #f1f1f1;*/
         }
+
+        .media {
+            color: black;
+        }
+
+
+
 
         /*kolor a w task index*/
        ul > li > a {
@@ -45,6 +53,10 @@
         ul > li {
             list-style-type: none;
 
+        }
+
+        #content > div > div > div > span > a {
+            color: #3BA66E;
         }
 
         #content > div > div {
