--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
@@ -10,7 +10,7 @@
 
         <!-- Comment -->
 
-             <p> {{ story.paragraph }}</p>
+             <p style="padding: 10px;text-align: justify"> {{ story.paragraph }}</p>
 
 
 
