--- a/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
@@ -92,9 +92,9 @@
                         <small style="float: right">
                             <ul>
                                 <ul>Pozycja{{ contact.position }}
-                                    <li>
-                                        Nazwa obrazka: {{ contact.cofilename }}
-                                    </li>
+                                    {#<li>#}
+                                        {#Nazwa obrazka: {{ contact.cofilename }}#}
+                                    {#</li>#}
                                     <li>
                                         Typ obrazka: {{ contact.conmime }}
                                     </li>
