--- a/symfonyCRUDpanel/app/Resources/views/squad/new.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/squad/new.html.twig
@@ -1,16 +1,16 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Squad creation</h1>
+    <h1>Dodawanie nowego członka</h1>
 
     {{ form_start(form) }}
         {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+        <input type="submit" value="Dodaj" />
     {{ form_end(form) }}
     {{ err }}
     <ul>
         <li>
-            <a href="{{ path('squad_index') }}">Back to the list</a>
+            <a href="{{ path('squad_index') }}">Powrót do listy</a>
         </li>
     </ul>
 {% endblock %}
