--- a/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
@@ -1,39 +1,82 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Story list</h1>
+    {#<h1>Story list</h1>#}
 
-    <table>
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Paragraph</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for story in stories %}
-            <tr>
-                <td><a href="{{ path('story_show', { 'id': story.id }) }}">{{ story.id }}</a></td>
-                <td>{{ story.paragraph }}</td>
-                <td>
-                    <ul>
+    {#<table>#}
+        {#<thead>#}
+            {#<tr>#}
+                {#<th>Id</th>#}
+                {#<th>Paragraph</th>#}
+                {#<th>Actions</th>#}
+            {#</tr>#}
+        {#</thead>#}
+        {#<tbody>#}
+        {#{% for story in stories %}#}
+            {#<tr>#}
+                {#<td><a href="{{ path('story_show', { 'id': story.id }) }}">{{ story.id }}</a></td>#}
+                {#<td>{{ story.paragraph }}</td>#}
+                {#<td>#}
+                    {#<ul>#}
+                        {#<li>#}
+                            {#<a href="{{ path('story_show', { 'id': story.id }) }}">show</a>#}
+                        {#</li>#}
+                        {#<li>#}
+                            {#<a href="{{ path('story_edit', { 'id': story.id }) }}">edit</a>#}
+                        {#</li>#}
+                    {#</ul>#}
+                {#</td>#}
+            {#</tr>#}
+        {#{% endfor %}#}
+        {#</tbody>#}
+    {#</table>#}
+
+    {#<ul>#}
+        {#<li>#}
+            {#<a href="{{ path('story_new') }}">Create a new entry</a>#}
+        {#</li>#}
+    {#</ul>#}
+
+    <h1>Historia, lista akapitów.</h1>
+
+    {% for story in stories %}
+    <div class="media">
+        <div class="media-body">
+            <h4 class="media-heading">Akapit numer:
+                <small style="float: right">
+                    <ul style="float: right; display: inline">
                         <li>
-                            <a href="{{ path('story_show', { 'id': story.id }) }}">show</a>
+                            <a href="{{ path('story_show', { 'id': story.id }) }}">Pokaż</a>
                         </li>
                         <li>
-                            <a href="{{ path('story_edit', { 'id': story.id }) }}">edit</a>
+                            <a href="{{ path('story_edit', { 'id': story.id }) }}">Edycja</a>
                         </li>
-                    </ul>
-                </td>
-            </tr>
+                    </ul></small>
+                <small style="float: right"></small>
+
+
+
+            </h4>
+
+            {#<a href="{{ path('tasks_show', { 'id': task.id }) }}">{{ task.id }}</a>#}
+            <br/>
+
+            <p style="text-align: justify">{{ story.paragraph }}</p>
+
+
+        </div>
+    </div>
+
+
+
+
+
+
         {% endfor %}
-        </tbody>
-    </table>
 
     <ul>
         <li>
-            <a href="{{ path('story_new') }}">Create a new entry</a>
+            <a href="{{ path('story_new') }}">Dodaj nowy akapit</a>
         </li>
     </ul>
 {% endblock %}
