--- a/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
@@ -37,7 +37,7 @@
         {#</li>#}
     {#</ul>#}
 
-    <h1>Historia, lista akapitów.</h1>
+    <h1>Lista akapitów historii.</h1>
 
     {% for story in stories %}
     <div class="media">
