--- a/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
@@ -42,7 +42,7 @@
     {% for story in stories %}
     <div class="media">
         <div class="media-body">
-            <h4 class="media-heading">Akapit numer:
+            <h4 class="media-heading">Akapit numer: {{ story.position }}
                 <small style="float: right">
                     <ul style="float: right; display: inline">
                         <li>
