--- a/symfonyCRUDpanel/app/Resources/views/story/show.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/story/show.html.twig
@@ -32,7 +32,7 @@
     <h1>Story</h1>
     <div class="media">
         <div class="media-body">
-            <h4 class="media-heading">Akapit numer:
+            <h4 class="media-heading">Akapit numer: {{ story.position }}
                 <small style="float: right">
                     <ul style="float: right; display: inline">
                         <li>
