--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/history.html.twig
@@ -6,7 +6,7 @@
     <h1>Historia</h1>
     <div class="media">
         <div class="media-body">
-    {% for story in stories %}
+    {% for story in pagination %}
 
         <!-- Comment -->
 
@@ -20,6 +20,8 @@
     </div>
 
 </div>
-
+    <div class="navigation" style="text-align: center;bottom:0;">
+        {{ knp_pagination_render(pagination) }}
+    </div>
 
 {% endblock %}
