--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -2,13 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8"/>
-    <title>Przykładowe API</title>
-
-    <meta charset="utf-8"/>
     <title>Miejska Orkiestra Dęta w Suchej Beskidzkiej</title>
     <meta name="description"
-          content="orkiestra Sucha Beskidzka"/>
-    <meta name="keywords" content="orkiestra"/>
+          content="Serwis poświęcony Miejskiej Orkiestrze Dętej w Suchej Beskidzkiej."/>
+    <meta name="keywords" content="orkiestra, muzyka, Sucha Beskidzka, kapelmistrz, instrumenty dęte, historia orkiestry, miejska orkiestra"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     {#<link rel="stylesheet" href="style.css" type="text/css"/>#}
     {#<link rel="stylesheet" href="css/fontello.css" type="text/css"/>#}
