--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -552,9 +552,8 @@
 
 
 
-        <h3 style="color: #c34f4f;text-align: center"> Miejska Orkiestra Dęta w</h3>
-        <h3 style="color: #c34f4f;text-align: center"> <img src="{{ asset('images/godło1.png') }}" width="40px"> Suchej Beskidzkiej
-        </h3>
+        <h2 style="color: #c34f4f;text-align: center"><img src="{{ asset('images/godło1.png') }}" style="margin-right: 20px" width="40px">Miejska Orkiestra Dęta w Suchej Beskidzkiej
+        </h2>
 
 
     </div>
