--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -361,8 +361,26 @@
         }
 
 
+        #footbar > div:nth-child(1) > div.col-md-8 > div:nth-child(3) > div > a:hover {
+            color: white;
+            text-decoration: underline;
+        }
+        #footbar > div:nth-child(1) > div.col-md-8 > div:nth-child(4) > div > a:hover {
+            color: white;
+            text-decoration: underline;
+        }
+        #footbar > div:nth-child(1) > div.col-md-8 > div:nth-child(2) > div > a:hover {
+            color: white;
+            text-decoration: underline;
+        }
+
+        #footbar > div:nth-child(1) > div.col-md-8 > div:nth-child(1) > div > a:hover {
+            color: white;
+            text-decoration: underline;
+        }
         .gplus:hover {
-            background-color: #d95333;
+            /*background-color: #d95333;*/
+            background-color: #fffc01;
             -webkit-transition: all 600ms ease-out;
             -moz-transition: all 600ms ease-out;
             -o-transition: all 600ms ease-out;
@@ -690,7 +708,7 @@
 
     <!--</div>-->
 
-    <div class="container-fluid">
+    <div class="container-fluid" id="footbar">
         <div class="row">
             <div class="col-md-2"></div>
             <div class="col-md-8">
@@ -711,7 +729,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <div class="gplus"><a href="https://www.plus.google.com"><i class="icon-gplus"></i></a></div>
+                    <div class="gplus"><a href="https://www.plus.google.com"><i class="icon-snapchat-square"></i></a></div>
                 </div>
 
                 <div style="clear: both"></div>
