--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -378,6 +378,11 @@
             color: white;
             text-decoration: underline;
         }
+
+        #footbar > div:nth-child(2) > div > p > a:hover {
+            color: #3BA66E;
+            text-decoration: none;
+        }
         .gplus:hover {
             /*background-color: #d95333;*/
             background-color: #fffc01;
