--- a/symfonyCRUDpanel/app/Resources/views/album/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/album/index.html.twig
@@ -45,7 +45,9 @@
         {#</li>#}
     {#</ul>#}
     <h1>Lista albumów</h1>
-
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
+    <br/> <br/>
 
         {% for album in albums %}
 
