--- a/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/contact/index.html.twig
@@ -51,7 +51,9 @@
         {#</li>#}
     {#</ul>#}
     <h1>Lista kontaktów</h1>
-
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
+    <br/> <br/>
 
         {% for contact in contacts %}
 
