--- a/symfonyCRUDpanel/app/Resources/views/image/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/image/index.html.twig
@@ -52,7 +52,9 @@
         {#</li>#}
     {#</ul>#}
     <h1>Lista zdjęć</h1>
-
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
+    <br/> <br/>
 
         {% for image in images %}
 
