--- a/symfonyCRUDpanel/app/Resources/views/squad/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/squad/index.html.twig
@@ -52,7 +52,9 @@
 
 
     <h1>Członkowie</h1>
-
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
+    <br/> <br/>
 
         {% for squad in squads %}
             <div class="media">
