--- a/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/story/index.html.twig
@@ -38,7 +38,9 @@
     {#</ul>#}
 
     <h1>Lista akapitów historii.</h1>
-
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
+    <br/> <br/>
     {% for story in stories %}
     <div class="media">
         <div class="media-body">
