--- a/symfonyCRUDpanel/app/Resources/views/tasks/index.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/tasks/index.html.twig
@@ -44,7 +44,8 @@
         {#</li>#}
     {#</ul>#}
     <h1>Lista postów</h1>
-    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a>
+    <a href="{{ path('fos_user_security_logout') }}">{{ 'layout.logout'|trans({}, 'FOSUserBundle') }}</a><br/>
+    <a href="{{ path('panel_index') }}">Panel</a>
 <br/> <br/>
 <div class="col-md-12">
             {#Id#}
