--- a/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
+++ b/symfonyCRUDpanel/src/MyFrontendBundle/Resources/views/Default/panel.html.twig
@@ -9,7 +9,7 @@
 
     <div class="row" style="text-align: center">
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/tasks">
+        <a href="{{ path('tasks_index') }}">
             <div class="col-md-3">
                 <div class="post">
 
@@ -24,7 +24,7 @@
             </div>
         </a>
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/squad">
+        <a href="{{ path('squad_index') }}">
             <div class="col-md-3">
                 <div class="squad"><i
                             class="icon-users"></i>
@@ -32,7 +32,7 @@
             </div>
         </a>
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/image">
+        <a href="{{ path('image_index') }}">
             <div class="col-md-3">
                 <div class="images"><i class="icon-camera"></i></div>
 
@@ -51,25 +51,25 @@
         {#</a>#}
 
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/album">
+        <a href="{{ path('album_index') }}">
             <div class="col-md-3">
                 <div class="albums"><i class="icon-th"></i></div>
             </div>
         </a>
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/carousel">
+        <a href="{{ path('carousel_index') }}">
             <div class="col-md-3">
                 <div class="caro"><i class="icon-docs"></i></div>
             </div>
         </a>
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/story">
+        <a href="{{ path('story_index') }}">
             <div class="col-md-3">
                 <div class="story"><i class="icon-hourglass"></i></div>
             </div>
         </a>
 
-        <a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/contact">
+        <a href="{{ path('contact_index') }}">
             <div class="col-md-3">
                 <div class="contact"><i class="icon-mail-alt"></i></div>
             </div>
