--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -21,7 +21,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    {#<link href="assets/css/bootstrap-responsive.css" rel="stylesheet">#}
     <link href=" {{asset ("/css/lightgallery.css") }}" rel="stylesheet">
 
 
@@ -678,12 +678,12 @@
                 <ol>
                     <ul class="nav navbar-nav">
 
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/">Strona główna</a></li>
+                        <li><a href="{{ path('main_index') }}">Strona główna</a></li>
 
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/history">Historia</a></li>
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/members">Skład</a></li>
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/albums">Galeria</a></li>
-                        <li><a href="http://localhost/symfonyCRUDpanel/web/app_dev.php/con">Kontakt</a></li>
+                        <li><a href="{{ path('history_index') }}">Historia</a></li>
+                        <li><a href="{{ path('members_index') }}">Skład</a></li>
+                        <li><a href="{{ path('film_index') }}">Galeria</a></li>
+                        <li><a href="{{ path('con_index') }}">Kontakt</a></li>
 
                     </ul>
                 </ol>
