--- a/symfonyCRUDpanel/app/Resources/views/base.html.twig
+++ b/symfonyCRUDpanel/app/Resources/views/base.html.twig
@@ -776,58 +776,58 @@
 
     </div>
     <script src="{{ asset('js/jquery-3.1.0.min.js') }}"></script>
-    {#<script>#}
-
-        {#$(document).ready(function () {#}
-            {#var NavY = $('.navbar').offset().top;#}
-
-            {#var stickyNav = function () {#}
-                {#var ScrollY = $(window).scrollTop();#}
-
-                {#if (ScrollY > NavY) {#}
-                    {#$('.navbar').addClass('sticky');#}
-                {#} else {#}
-                    {#$('.navbar').removeClass('sticky');#}
-                {#}#}
-            {#};#}
-
-            {#stickyNav();#}
-
-            {#$(window).scroll(function () {#}
-                {#stickyNav();#}
-            {#});#}
-        {#});#}
-
-    {#</script>#}
     <script>
-        // Create a clone of the menu, right next to original.
-        $('.navbar').addClass('original').clone().insertAfter('.navbar').addClass('cloned').css('position','fixed').css('top','0').css('margin-top','0').css('z-index','500').removeClass('original').hide();
 
-        scrollIntervalID = setInterval(stickIt, 10);
+        $(document).ready(function () {
+            var NavY = $('.navbar').offset().top;
 
+            var stickyNav = function () {
+                var ScrollY = $(window).scrollTop();
 
-        function stickIt() {
+                if (ScrollY > NavY) {
+                    $('.navbar').addClass('sticky');
+                } else {
+                    $('.navbar').removeClass('sticky');
+                }
+            };
 
-            var orgElementPos = $('.original').offset();
-            orgElementTop = orgElementPos.top;
+            stickyNav();
 
-            if ($(window).scrollTop() >= (orgElementTop)) {
-                // scrolled past the original position; now only show the cloned, sticky element.
+            $(window).scroll(function () {
+                stickyNav();
+            });
+        });
 
-                // Cloned element should always have same left position and width as original element.
-                orgElement = $('.original');
-                coordsOrgElement = orgElement.offset();
-                leftOrgElement = coordsOrgElement.left;
-                widthOrgElement = orgElement.css('width');
-                $('.cloned').css('left',leftOrgElement+'px').css('top',0).css('width',widthOrgElement).show();
-                $('.original').css('visibility','hidden');
-            } else {
-                // not scrolled past the menu; only show the original menu.
-                $('.cloned').hide();
-                $('.original').css('visibility','visible');
-            }
-        }
     </script>
+    {#<script>#}
+        {#// Create a clone of the menu, right next to original.#}
+        {#$('.navbar').addClass('original').clone().insertAfter('.navbar').addClass('cloned').css('position','fixed').css('top','0').css('margin-top','0').css('z-index','500').removeClass('original').hide();#}
+
+        {#scrollIntervalID = setInterval(stickIt, 10);#}
+
+
+        {#function stickIt() {#}
+
+            {#var orgElementPos = $('.original').offset();#}
+            {#orgElementTop = orgElementPos.top;#}
+
+            {#if ($(window).scrollTop() >= (orgElementTop)) {#}
+                {#// scrolled past the original position; now only show the cloned, sticky element.#}
+
+                {#// Cloned element should always have same left position and width as original element.#}
+                {#orgElement = $('.original');#}
+                {#coordsOrgElement = orgElement.offset();#}
+                {#leftOrgElement = coordsOrgElement.left;#}
+                {#widthOrgElement = orgElement.css('width');#}
+                {#$('.cloned').css('left',leftOrgElement+'px').css('top',0).css('width',widthOrgElement).show();#}
+                {#$('.original').css('visibility','hidden');#}
+            {#} else {#}
+                {#// not scrolled past the menu; only show the original menu.#}
+                {#$('.cloned').hide();#}
+                {#$('.original').css('visibility','visible');#}
+            {#}#}
+        {#}#}
+    {#</script>#}
     <script src="{{ asset("/js/picturefill.min.js") }}"></script>
     {#<script src="https://cdn.rawgit.com/sachinchoolur/lightgallery.js/master/dist/js/lightgallery.js"></script>#}
     <script src="{{ asset("/js/lightgallery.js") }}"></script>
