--- a/FrontSupportApp/app/Resources/views/base.html.twig
+++ b/FrontSupportApp/app/Resources/views/base.html.twig
@@ -586,68 +586,12 @@
 
 
 
-        <h2 style="color: #c34f4f;text-align: center"><img src="{{ asset('images/godło1.png') }}" style="margin-right: 20px" width="40px">Miejska Orkiestra Dęta w Suchej Beskidzkiej
+        <h2 style="color: #c34f4f;text-align: center"><img src="{{ asset('images/godło1.png') }}" style="margin-right: 20px" width="40px">Firmowa strona internetowa w oparciu o system FrontSupport
+
         </h2>
 
     </div>
-    {#<div class="logo">#}
-    {#<h1 style="color: #c34f4f;text-align: center">orkiestra.com</h1>#}
 
-    {#</div>#}
-
-
-    {#<!-- Carousel#}
-   {#================================================== -->#}
-    {#<div id="myCarousel" class="carousel slide" data-ride="carousel">#}
-        {#<!-- Indicators -->#}
-        {#<ol class="carousel-indicators">#}
-            {#<li data-target="#myCarousel" data-slide-to="0" class="active"></li>#}
-            {#<li data-target="#myCarousel" data-slide-to="1"></li>#}
-            {#<li data-target="#myCarousel" data-slide-to="2"></li>#}
-        {#</ol>#}
-        {#<div class="carousel-inner" role="listbox">#}
-            {#<div class="item active">#}
-                {#<img class="first-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="First slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="item">#}
-                {#<img class="second-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="Second slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-            {#<div class="item">#}
-                {#<img class="third-slide" style="margin: auto" src="{{ asset("images/traba.jpg") }}" alt="Third slide">#}
-                {#<div class="container">#}
-                    {#<div class="carousel-caption">#}
-                        {#<h1></h1>#}
-                        {#<p></p>#}
-                        {#<p></p>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-        {#<a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">#}
-            {#<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>#}
-            {#<span class="sr-only">Previous</span>#}
-        {#</a>#}
-        {#<a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">#}
-            {#<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>#}
-            {#<span class="sr-only">Next</span>#}
-        {#</a>#}
-    {#</div><!-- /.carousel -->#}
-
-    {#{% block carousel %} {% endblock %}#}
 
     {{ render(controller('FrontSupportBundle:Image:carousel')) }}
     <!-- navbar
