change name path

--- a/FrontSupportApp/src/FrontSupportBundle/Resources/views/Default/gallery.html.twig
+++ b/FrontSupportApp/src/FrontSupportBundle/Resources/views/Default/gallery.html.twig
@@ -37,7 +37,7 @@
     {#{{ knp_pagination_render(pagination) }}#}
 {#</div>#}
 {#</div>#}
-    {#<li><a href="{{ path('film_index') }}">Lista filmów</a></li>#}
+    {#<li><a href="{{ path('picture_index') }}">Lista pictureów</a></li>#}
     {#{{ render(controller('FrontSupportBundle:Gallery:index')) }}#}
     {#{% include 'FrontSupportBundle:Gallery:index'.html.twig'  %}#}
 
