--- a/FrontSupportApp/app/Resources/views/base.html.twig
+++ b/FrontSupportApp/app/Resources/views/base.html.twig
@@ -637,7 +637,7 @@
 
                         <li><a href="{{ path('history_index') }}">Historia</a></li>
                         <li><a href="{{ path('members_index') }}">Skład</a></li>
-                        <li><a href="{{ path('film_index') }}">Galeria</a></li>
+                        <li><a href="{{ path('picture_index') }}">Galeria</a></li>
                         <li><a href="{{ path('con_index') }}">Kontakt</a></li>
 
                     </ul>
