Delete comments in views.

--- a/FrontSupportApp/app/Resources/views/base.html.twig
+++ b/FrontSupportApp/app/Resources/views/base.html.twig
@@ -76,16 +76,16 @@
 
 
 
+            background-color: #222930;
 
-
-            background: rgba(241,231,103,1);
-            background: -moz-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);
-            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(34,41,48,1)));
-            background: -webkit-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);
-            background: -o-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);
-            background: -ms-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);
-            background: radial-gradient(ellipse at center, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#222930', GradientType=1 );
+            /*background: rgba(241,231,103,1);*/
+            /*background: -moz-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(241,231,103,1)), color-stop(100%, rgba(34,41,48,1)));*/
+            /*background: -webkit-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -o-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: -ms-radial-gradient(center, ellipse cover, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*background: radial-gradient(ellipse at center, rgba(241,231,103,1) 0%, rgba(34,41,48,1) 100%);*/
+            /*filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#222930', GradientType=1 );*/
         }
 
         body > div.container > div:nth-child(5) > div:nth-child(1) {
@@ -586,7 +586,7 @@
 
 
 
-        <h2 style="color: #c34f4f;text-align: center"><img src="{{ asset('images/godło1.png') }}" style="margin-right: 20px" width="40px">Firmowa strona internetowa w oparciu o system FrontSupport
+        <h2 style="color: #c34f4f;text-align: center"><img src="{{ asset('images/godło1.png') }}" style="margin-right: 20px" width="40px">Miejska Orkiestra Dęta W Suchej Beskidzkiej
 
         </h2>
 
